se corrige error en main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           
       - name: Deploy to AWS Lambda
         run: |
-          aws lambda update-function-code --function-name=yt-lamda-func--zip-file fileb://deploy.zip 
+          aws lambda update-function-code --function-name=yt-lamda-func --zip-file fileb://deploy.zip
